# pyscsp

./: .#discscsp.py  .gitignore  .pylintrc  LICENSE.md  License  README.md  affscspdemo.ipynb  affscsptest.ipynb  discscsp.py  discscspdemo.ipynb  discscsptest.ipynb  gaussdersdemo.ipynb  gaussderstest.ipynb  pyproject.toml  torchaffscsptest.ipynb  torchscsp.py  torchscsptest.ipynb
.ipynb_checkpoints/: discscsptest-checkpoint.ipynb
pyscsp/: __init__.py  affscsp.py  discscsp.py  gaussders.py  torchscsp.py
